[project]
name = "atcoder-rye-ruff"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "radiol", email = "radiol@github.com" }]
dependencies = [
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "sympy>=1.12",
    "more-itertools>=10.1.0",
    "ac-library-python @ git+https://github.com/not522/ac-library-python",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.9.1",
    "ruff>=0.0.290",
    "mypy>=1.5.1",
    "online-judge-tools>=11.5.1",
    "ipython>=8.12.2",
    "atcoder-tools>=2.13.0",
    "pytest>=7.4.2",
    "isort>=5.12.0",
    "ruff-lsp>=0.0.39",
]

[tool.ruff]
select = ["ALL"]
ignore = [
    "A001",
    "D",       # docstring系は全て無視
    "E741",    # lを変数として使えるように
    "N806",
    "T201",
    "ANN",
    "INP001",
    "PLR1722",
    "PLR2004", # 定数の使用を推奨
]
fixable = ["ALL"]
unfixable = ["F841"]
line-length = 88

[tool.hatch.metadata]
allow-direct-references = true
